src/stylesheets/components/_arrow.scss
@use "../abstracts/" as *;

.testimonials {
  &__arrow {
    @include flex($justify: center, $align: center);
    border-radius: 0.8rem;
    gap: 0.4612rem;
    background-color: #fffafa;
    box-shadow: 0.2rem 0.1rem 0.3rem 0rem rgba(0, 0, 0, 0.25);
    padding: 1.3rem 0.6rem;
    border: none;
    cursor: pointer;

    &--next {
      transform: rotate(180deg);
    }

    &--next,
    &--prev {
      width: 2.4rem;
      height: 2.7rem;
    }
  }

  &__arrow-icon {
    object-fit: contain;
    object-position: center;
    transform: scale(10);
    max-width: 100%;
    max-height: 100%;
    display: block;
  }

  @include tablet {
    &__arrow {
      gap: 1rem;
      border-radius: 1.7rem;
      box-shadow: 0.3rem 0.2rem 0.6rem 0.1rem rgba(0, 0, 0, 0.25);
      padding: 2.8rem 1.3rem;
      border: none;
      cursor: pointer;

      &--next,
      &--prev {
        width: 5.1rem;
        height: 5.7rem;
      }
    }

    &__arrow-icon {
      transform: scale(18);
    }
  }

  &__both-arrow {
    @include flex($align: flex-start);
    gap: 3.2rem;
  }
}

